easmParser.py
# Generated from easm.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class easmParser ( Parser ):

    grammarFileName = "easm.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'struct'", "'func'", "'import'", "'native'", 
                     "'pass'", "'delete'", "'jump'", "'if'", "':'", "'->'", 
                     "'push'", "'pull'", "'='", "'!='", "'>'", "'<'", "'>='", 
                     "'<='", "'inc'", "'dec'", "'new'", "'local'", "'call'", 
                     "'('", "','", "')'", "'ptr'", "'not'", "'ssize'", "'['", 
                     "']'", "'and'", "'or'", "'xor'", "'nor'", "'nand'", 
                     "'xnor'", "'add'", "'sub'", "'mul'", "'div'", "'rem'", 
                     "'shr'", "'shl'", "'as'", "'.'", "'int'", "'float'", 
                     "'string'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "Pony", "Id", "IConst", 
                      "FConst", "CConst", "SConst", "Whitespace", "Newline", 
                      "BlockComment", "LineComment" ]

    RULE_program = 0
    RULE_structure = 1
    RULE_function = 2
    RULE_importStat = 3
    RULE_expression = 4
    RULE_pass = 5
    RULE_delete = 6
    RULE_jump = 7
    RULE_label = 8
    RULE_move = 9
    RULE_push = 10
    RULE_pull = 11
    RULE_condition = 12
    RULE_inc = 13
    RULE_dec = 14
    RULE_rvalue = 15
    RULE_newStat = 16
    RULE_call = 17
    RULE_ptr = 18
    RULE_not = 19
    RULE_stacksize = 20
    RULE_getMem = 21
    RULE_binaryOperator = 22
    RULE_cvalue = 23
    RULE_lvalue = 24
    RULE_cast = 25
    RULE_dot = 26
    RULE_dataTypeDeclaration = 27
    RULE_valueType = 28

    ruleNames =  [ "program", "structure", "function", "importStat", "expression", 
                   "pass", "delete", "jump", "label", "move", "push", "pull", 
                   "condition", "inc", "dec", "rvalue", "newStat", "call", 
                   "ptr", "not", "stacksize", "getMem", "binaryOperator", 
                   "cvalue", "lvalue", "cast", "dot", "dataTypeDeclaration", 
                   "valueType" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    Pony=50
    Id=51
    IConst=52
    FConst=53
    CConst=54
    SConst=55
    Whitespace=56
    Newline=57
    BlockComment=58
    LineComment=59

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Pony(self):
            return self.getToken(easmParser.Pony, 0)

        def EOF(self):
            return self.getToken(easmParser.EOF, 0)

        def importStat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(easmParser.ImportStatContext)
            else:
                return self.getTypedRuleContext(easmParser.ImportStatContext,i)


        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(easmParser.FunctionContext)
            else:
                return self.getTypedRuleContext(easmParser.FunctionContext,i)


        def structure(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(easmParser.StructureContext)
            else:
                return self.getTypedRuleContext(easmParser.StructureContext,i)


        def pass_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(easmParser.PassContext)
            else:
                return self.getTypedRuleContext(easmParser.PassContext,i)


        def getRuleIndex(self):
            return easmParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = easmParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(easmParser.Pony)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 46) != 0):
                self.state = 63
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [3]:
                    self.state = 59
                    self.importStat()
                    pass
                elif token in [2]:
                    self.state = 60
                    self.function()
                    pass
                elif token in [1]:
                    self.state = 61
                    self.structure()
                    pass
                elif token in [5]:
                    self.state = 62
                    self.pass_()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 68
            self.match(easmParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Id(self):
            return self.getToken(easmParser.Id, 0)

        def dataTypeDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(easmParser.DataTypeDeclarationContext)
            else:
                return self.getTypedRuleContext(easmParser.DataTypeDeclarationContext,i)


        def getRuleIndex(self):
            return easmParser.RULE_structure

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructure" ):
                listener.enterStructure(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructure" ):
                listener.exitStructure(self)




    def structure(self):

        localctx = easmParser.StructureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_structure)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(easmParser.T__0)
            self.state = 71
            self.match(easmParser.Id)
            self.state = 73 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 72
                self.dataTypeDeclaration()
                self.state = 75 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 3236962232172544) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Id(self):
            return self.getToken(easmParser.Id, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(easmParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(easmParser.ExpressionContext,i)


        def getRuleIndex(self):
            return easmParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)




    def function(self):

        localctx = easmParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_function)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(easmParser.T__1)
            self.state = 78
            self.match(easmParser.Id)
            self.state = 82
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 79
                    self.expression() 
                self.state = 84
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportStatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SConst(self):
            return self.getToken(easmParser.SConst, 0)

        def getRuleIndex(self):
            return easmParser.RULE_importStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportStat" ):
                listener.enterImportStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportStat" ):
                listener.exitImportStat(self)




    def importStat(self):

        localctx = easmParser.ImportStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_importStat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(easmParser.T__2)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 86
                self.match(easmParser.T__3)


            self.state = 89
            self.match(easmParser.SConst)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pass_(self):
            return self.getTypedRuleContext(easmParser.PassContext,0)


        def delete(self):
            return self.getTypedRuleContext(easmParser.DeleteContext,0)


        def jump(self):
            return self.getTypedRuleContext(easmParser.JumpContext,0)


        def label(self):
            return self.getTypedRuleContext(easmParser.LabelContext,0)


        def move(self):
            return self.getTypedRuleContext(easmParser.MoveContext,0)


        def call(self):
            return self.getTypedRuleContext(easmParser.CallContext,0)


        def push(self):
            return self.getTypedRuleContext(easmParser.PushContext,0)


        def pull(self):
            return self.getTypedRuleContext(easmParser.PullContext,0)


        def inc(self):
            return self.getTypedRuleContext(easmParser.IncContext,0)


        def dec(self):
            return self.getTypedRuleContext(easmParser.DecContext,0)


        def getRuleIndex(self):
            return easmParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = easmParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_expression)
        try:
            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.pass_()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.delete()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 93
                self.jump()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 94
                self.label()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 95
                self.move()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 96
                self.call()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 97
                self.push()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 98
                self.pull()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 99
                self.inc()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 100
                self.dec()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PassContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SConst(self):
            return self.getToken(easmParser.SConst, 0)

        def getRuleIndex(self):
            return easmParser.RULE_pass

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPass" ):
                listener.enterPass(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPass" ):
                listener.exitPass(self)




    def pass_(self):

        localctx = easmParser.PassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_pass)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(easmParser.T__4)
            self.state = 104
            self.match(easmParser.SConst)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeleteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Id(self):
            return self.getToken(easmParser.Id, 0)

        def getRuleIndex(self):
            return easmParser.RULE_delete

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDelete" ):
                listener.enterDelete(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDelete" ):
                listener.exitDelete(self)




    def delete(self):

        localctx = easmParser.DeleteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_delete)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(easmParser.T__5)
            self.state = 107
            self.match(easmParser.Id)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class JumpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Id(self):
            return self.getToken(easmParser.Id, 0)

        def condition(self):
            return self.getTypedRuleContext(easmParser.ConditionContext,0)


        def getRuleIndex(self):
            return easmParser.RULE_jump

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJump" ):
                listener.enterJump(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJump" ):
                listener.exitJump(self)




    def jump(self):

        localctx = easmParser.JumpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_jump)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(easmParser.T__6)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 110
                self.match(easmParser.T__7)
                self.state = 111
                self.condition()


            self.state = 114
            self.match(easmParser.Id)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LabelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Id(self):
            return self.getToken(easmParser.Id, 0)

        def getRuleIndex(self):
            return easmParser.RULE_label

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLabel" ):
                listener.enterLabel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLabel" ):
                listener.exitLabel(self)




    def label(self):

        localctx = easmParser.LabelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_label)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(easmParser.Id)
            self.state = 117
            self.match(easmParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MoveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rvalue(self):
            return self.getTypedRuleContext(easmParser.RvalueContext,0)


        def lvalue(self):
            return self.getTypedRuleContext(easmParser.LvalueContext,0)


        def getRuleIndex(self):
            return easmParser.RULE_move

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMove" ):
                listener.enterMove(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMove" ):
                listener.exitMove(self)




    def move(self):

        localctx = easmParser.MoveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_move)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.rvalue()
            self.state = 120
            self.match(easmParser.T__9)
            self.state = 121
            self.lvalue()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PushContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cvalue(self):
            return self.getTypedRuleContext(easmParser.CvalueContext,0)


        def getRuleIndex(self):
            return easmParser.RULE_push

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPush" ):
                listener.enterPush(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPush" ):
                listener.exitPush(self)




    def push(self):

        localctx = easmParser.PushContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_push)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(easmParser.T__10)
            self.state = 124
            self.cvalue()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PullContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lvalue(self):
            return self.getTypedRuleContext(easmParser.LvalueContext,0)


        def getRuleIndex(self):
            return easmParser.RULE_pull

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPull" ):
                listener.enterPull(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPull" ):
                listener.exitPull(self)




    def pull(self):

        localctx = easmParser.PullContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_pull)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(easmParser.T__11)
            self.state = 128
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 127
                self.lvalue()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cvalue(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(easmParser.CvalueContext)
            else:
                return self.getTypedRuleContext(easmParser.CvalueContext,i)


        def getRuleIndex(self):
            return easmParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)




    def condition(self):

        localctx = easmParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_condition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.cvalue()
            self.state = 131
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 516096) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 132
            self.cvalue()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lvalue(self):
            return self.getTypedRuleContext(easmParser.LvalueContext,0)


        def IConst(self):
            return self.getToken(easmParser.IConst, 0)

        def FConst(self):
            return self.getToken(easmParser.FConst, 0)

        def CConst(self):
            return self.getToken(easmParser.CConst, 0)

        def getRuleIndex(self):
            return easmParser.RULE_inc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInc" ):
                listener.enterInc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInc" ):
                listener.exitInc(self)




    def inc(self):

        localctx = easmParser.IncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_inc)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(easmParser.T__18)
            self.state = 139
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [51]:
                self.state = 135
                self.lvalue()
                pass
            elif token in [52]:
                self.state = 136
                self.match(easmParser.IConst)
                pass
            elif token in [53]:
                self.state = 137
                self.match(easmParser.FConst)
                pass
            elif token in [54]:
                self.state = 138
                self.match(easmParser.CConst)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lvalue(self):
            return self.getTypedRuleContext(easmParser.LvalueContext,0)


        def IConst(self):
            return self.getToken(easmParser.IConst, 0)

        def FConst(self):
            return self.getToken(easmParser.FConst, 0)

        def CConst(self):
            return self.getToken(easmParser.CConst, 0)

        def getRuleIndex(self):
            return easmParser.RULE_dec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDec" ):
                listener.enterDec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDec" ):
                listener.exitDec(self)




    def dec(self):

        localctx = easmParser.DecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_dec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(easmParser.T__19)
            self.state = 146
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [51]:
                self.state = 142
                self.lvalue()
                pass
            elif token in [52]:
                self.state = 143
                self.match(easmParser.IConst)
                pass
            elif token in [53]:
                self.state = 144
                self.match(easmParser.FConst)
                pass
            elif token in [54]:
                self.state = 145
                self.match(easmParser.CConst)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RvalueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def newStat(self):
            return self.getTypedRuleContext(easmParser.NewStatContext,0)


        def stacksize(self):
            return self.getTypedRuleContext(easmParser.StacksizeContext,0)


        def call(self):
            return self.getTypedRuleContext(easmParser.CallContext,0)


        def getMem(self):
            return self.getTypedRuleContext(easmParser.GetMemContext,0)


        def ptr(self):
            return self.getTypedRuleContext(easmParser.PtrContext,0)


        def not_(self):
            return self.getTypedRuleContext(easmParser.NotContext,0)


        def binaryOperator(self):
            return self.getTypedRuleContext(easmParser.BinaryOperatorContext,0)


        def cvalue(self):
            return self.getTypedRuleContext(easmParser.CvalueContext,0)


        def getRuleIndex(self):
            return easmParser.RULE_rvalue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRvalue" ):
                listener.enterRvalue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRvalue" ):
                listener.exitRvalue(self)




    def rvalue(self):

        localctx = easmParser.RvalueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_rvalue)
        try:
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 148
                self.newStat()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 149
                self.stacksize()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 150
                self.call()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 151
                self.getMem()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 152
                self.ptr()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 153
                self.not_()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 154
                self.binaryOperator()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 155
                self.cvalue()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NewStatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Id(self):
            return self.getToken(easmParser.Id, 0)

        def getRuleIndex(self):
            return easmParser.RULE_newStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNewStat" ):
                listener.enterNewStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNewStat" ):
                listener.exitNewStat(self)




    def newStat(self):
